fix: custom code-block in blogs & fixed blog layout syntax according to MDX-3 (#811)
* fix(code-block): custom MDX code block without layout shift

* style: updated code block styling to match Uli theme

* fix: update mdx wrapper syntax in one blog page

* fix(codeSnippet): handle children safely using React.Children.toArray and trim

* fix(blog): Replaced blog headings with bold text to avoid spacing issues

* Revert "fix(blog): Replaced blog headings with bold text to avoid spacing issues"

This reverts commit 423dac4227418df525acc8dd8a8d0ee580c20b57.

---------

--- a/uli-website/src/styles/global.css
+++ b/uli-website/src/styles/global.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* pre {
+  overflow-x: auto;
+  white-space: pre;
+  word-break: normal;
+} */
+
+pre>code {
+  background: #FFF2DC;
+  font-family: monospace;
+  font-size: 0.95rem;
+  line-height: 1.6;
+  border-radius: 6px;
+  padding: 1rem;
+  display: block;
+  overflow-x: auto;
+}
